I fixed the nav menu items animation not showing right and then I improved the smoothness of the fade-in-left animation. I also made sure that the hero title is centered on landscape mode too

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -2,7 +2,10 @@
 
 .hero {
   @include breakpoint(medium) {
-    padding: 2rem 0;
+    padding-bottom: 1rem;
+  }
+  @include breakpoint(large) {
+    align-self: center;
   }
   &__title {
     opacity: 0;
