--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -2,7 +2,7 @@
 
 .nav {
   z-index: 100;
-  max-height: 4.5rem;
+  max-height: 5rem;
   display: flex;
   transition: background $transition-primary;
   &:hover {
@@ -33,7 +33,7 @@
     gap: 2rem;
     @media screen and (max-height: 32em) {
       gap: 1rem;
-      padding-top: 1.5rem;
+      padding-top: 2.5rem;
     }
     @include breakpoint(large) {
       transition: background 0s;
@@ -65,7 +65,7 @@
         font-size: 1.5rem;
       }
       @include breakpoint(medium) {
-        font-size: 1.9rem;
+        font-size: 2.2rem;
       }
       @include breakpoint(large) {
         font-size: 15px;
